==> aabzel/trunk/source/mcal/mcal_nrf5340/i2s/i2s_drv.c <==
#include "i2s_drv.h"
#include <limits.h>
#include <math.h>
#include <stdlib.h>
#include <string.h>
#include <irq.h>
#include <nrfx_clock.h>
#include <zephyr/device.h>
#include <zephyr/drivers/pinctrl.h>
#include <zephyr/kernel.h>
#include "i2s_volume.h"
#include "board_config.h"
#include "debugger.h"
#include "common_diag.h"
#include "clock.h"
#include "data_utils.h"
#include "gpio_mcal.h"
#include "hal_nrfx_diag.h"
#include "i2s_config.h"
#include "i2s_diag.h"
#include "utils_math.h"
#include "i2s_isr.h"
#include "i2s_nrf_types.h"
#include "i2s_types.h"
#include "test_i2s.h"
#include "gpio_diag.h"
#include "fda801_drv.h"
#include "log.h"
#include "nrfx_errors.h"
#include "nrfx_i2s.h"
#include "sys_config.h"
#include "sw_dac_drv.h"

bool i2s_api_read(uint8_t num, SampleType_t* array, size_t array_len) {
    bool res = false;
    (void)num;
    I2sHandle_t* Node = I2sGetNode(num);
    if(Node) {
        if(array && array_len) {
            Node->cur_rx_track = 0;
            nrfx_i2s_stop();
            Node->i2s_buffers[0].p_rx_buffer = (uint32_t*)array;
            Node->i2s_buffers[0].p_tx_buffer = NULL;

            Node->i2s_buffers[1].p_rx_buffer = (uint32_t*)array;
            Node->i2s_buffers[1].p_tx_buffer = NULL;
            nrfx_err_t ret = nrfx_i2s_start((nrfx_i2s_buffers_t const*)&Node->i2s_buffers[0], (uint16_t)array_len, 0);
            if(NRFX_SUCCESS == ret) {
                LOG_INFO(I2S, "StartReadOk");
                res = true;
            } else {
                LOG_ERROR(I2S, "StartErr %s", HalStatus2Str(ret));
            }
        } else {
            LOG_ERROR(I2S, "DataErr");
        }
    } else {
        LOG_ERROR(I2S, "%u NodeErr", num);
    }
    return res;
}

bool i2s_read_sample(uint8_t num, size_t size) {
    bool res = false;
    I2sHandle_t* Node = I2sGetNode(num);
    if(Node) {
        res = i2s_api_read(num, (SampleType_t*)&Node->rx_sample.u32[0], size);
        if(res) {
            LOG_INFO(I2S, "Rx" LOG_OK);
            res = true;
        } else {
            Node->Err.read++;
            LOG_ERROR(I2S, "%u RxErr", num);
        }
    } else {
        LOG_ERROR(I2S, "%u NodeErr", num);
    }
    return res;
}

bool i2s_dma_stop(uint8_t num) {
    bool res = false;
    LOG_INFO(I2S, "Stop %u", num);
    I2sHandle_t* Node = I2sGetNode(num);
    if(Node) {
        Node->in_progress = false;
        nrfx_i2s_stop();
        LOG_INFO(I2S, "%u Stop", num);
        res = true;
    } else {
        LOG_ERROR(I2S, "%u NodeGetErr", num);
    }
    return res;
}

bool i2s_api_write(uint8_t num, SampleType_t* array, size_t frames_to_send) {

    bool res = false;
    (void)num;
    LOG_INFO(I2S, "I2S%u Write %u Frames", num, frames_to_send);
    I2sHandle_t* Node = I2sGetNode(num);
    if(Node) {
        if(false == Node->in_progress) {
            Node->cur_tx_track = 0;
            nrfx_i2s_stop();
            Node->frames_to_send = frames_to_send;
            Node->i2s_buffers[0].p_rx_buffer = (uint32_t*)NULL;
            Node->i2s_buffers[0].p_tx_buffer = (uint32_t*)array;

            Node->i2s_buffers[1].p_rx_buffer = (uint32_t*)NULL;
            Node->i2s_buffers[1].p_tx_buffer = (uint32_t*)array;
            nrfx_err_t ret =
                nrfx_i2s_start((nrfx_i2s_buffers_t const*)&Node->i2s_buffers[0], (uint16_t)frames_to_send, 0);
            if(NRFX_SUCCESS == ret) {
                res = true;
                Node->in_progress = true;
                LOG_DEBUG(I2S, "%u WrOk %u Frames", num, frames_to_send);
            } else {
                Node->Err.start++;
                LOG_ERROR(I2S, "StartErr %s", HalStatus2Str(ret));
                res = false;
            }
        } else {
            LOG_ERROR(I2S, "I2S%u Busy", num);
            Node->Err.busy++;
        }
    } else {
        LOG_ERROR(I2S, "%u NodeErr", num);
    }
    return res;
}

bool i2s_read_write(uint8_t num, uint32_t tx_sample) {
    bool res = false;
    Type32Union_t un32;
    un32.u32 = tx_sample;
    LOG_DEBUG(I2S, "%u ReadWrite TxSample:0x%08x", num, tx_sample);
    I2sHandle_t* Node = I2sGetNode(num);
    if(Node) {
        Node->cur_tx_track = 0;
        nrfx_i2s_stop();
        Node->tx_sample.u32[0] = un32.u16[0];
        Node->tx_sample.u32[1] = un32.u16[1];
        Node->i2s_buffers[0].p_tx_buffer = (uint32_t*)&Node->tx_sample;
        Node->i2s_buffers[0].p_rx_buffer = (uint32_t*)&Node->rx_sample;
        nrfx_err_t ret = nrfx_i2s_start((nrfx_i2s_buffers_t const*)&Node->i2s_buffers[0], (uint16_t)2, 0);
        if(NRFX_SUCCESS == ret) {
            res = true;
            LOG_INFO(I2S, "%u TxRxOk", num);
        } else {
            Node->Err.start++;
            res = false;
            LOG_ERROR(I2S, "%u TxRxErr %u %s", num, ret, HalStatus2Str(ret));
        }
    } else {
        LOG_ERROR(I2S, "%u NodeErr", num);
    }
    return res;
}

bool i2s_play_tx(uint8_t num, uint8_t dac_num, bool status) {
    bool res = false;
    LOG_INFO(I2S, "I2S%u PlayTx DAC%u %s", num, dac_num, OnOff2Str(status));
    I2sHandle_t* Node = I2sGetNode(num);
    if(Node) {
#ifdef HAS_SW_DAC
        Node->dac_num = dac_num;
        SwDac_t* DacNode = SwDacGetNode(dac_num);
        if(DacNode) {
            LOG_DEBUG(I2S, "SpotDac %u", dac_num);
            Node->dac_num = dac_num;

#ifdef HAS_DYNAMIC_SAMPLES
            if(DacNode->tx_sample_array) {
                res = true;
            } else {
                res = false;
                LOG_ERROR(LG_DAC, "TrackArrayErr");
            }
#endif /*HAS_DYNAMIC_SAMPLES*/
            if(DacNode->sample_cnt) {
                res = true;
            } else {
                res = false;
                LOG_ERROR(LG_DAC, "TrackSampleCntErr");
            }

            if(res) {
                LOG_INFO(I2S, "SpotRecord %u", dac_num);
                Node->loopback = false;
                Node->play = status;
                if(Node->play) {
                    // i2s_dma_stop(num);
                    LOG_INFO(I2S, "Play %u samples", DacNode->sample_cnt);
                    LOG_DEBUG(I2S, "StartPlay");
#ifdef HAS_DYNAMIC_SAMPLES
                    res = i2s_api_write(num, &DacNode->tx_sample_array[0], DacNode->sample_cnt);
#else /*HAS_DYNAMIC_SAMPLES*/
#ifdef HAS_SW_DAC_STATIC_SAMPLES
                    res = i2s_api_write(num, &DacNode->tx_sample_static_array[0], DacNode->sample_cnt);
#endif /*HAS_SW_DAC_STATIC_SAMPLES*/
#endif /*HAS_DYNAMIC_SAMPLES*/
                    if(res) {
                        LOG_INFO(I2S, "TxOk %u Samples", DacNode->sample_cnt);
                    } else {
                        Node->Err.write++;
                        LOG_ERROR(I2S, "I2sWriteErr");
                    }
                } else {
                    res = true;
                }
            } else {
                LOG_ERROR(LG_DAC, "TrackErr");
            }
        } else {
            LOG_ERROR(LG_DAC, "HandleErr");
        }
#else
        LOG_ERROR(I2S, "Add SW_DAC component");
#endif /*HAS_SW_DAC*/
    } else {
        LOG_ERROR(I2S, "HandleErr");
    }
    return res;
}

bool i2s_init(void) {
    bool res = false;
    set_log_level(I2S, LOG_LEVEL_NOTICE);
    uint32_t i = 0;
    uint32_t cnt = 0;
    cnt = i2s_get_cnt();
    LOG_WARNING(I2S, "Init Cnt %u", cnt);
    if(1 == cnt) {
        for(i = 0; i < cnt; i++) {
            res = i2s_init_one(i);
            if(res) {
                cnt++;
            }
        }
        if(cnt) {
            res = true;
        } else {
            res = false;
        }
    } else {
        LOG_ERROR(I2S, "ConfigErr %u", cnt);
    }
    return res;
}
