==> aabzel/trunk/source/mcal/mcal_zephyr/i2s/i2s_drv.c <==
#include "i2s_drv.h"
#include <stddef.h>
#include <stdint.h>
#include <stdio.h>
#include <string.h>
#include <zephyr/device.h>
#include <zephyr/drivers/i2s.h>
#include <zephyr/kernel.h>
#include <zephyr/zephyr.h>
#include "i2s_config.h"
#include "i2s_zephyr_types.h"
#include "macro_utils.h"
#include "sw_dac_drv.h"
#include "zephyr_diag.h"
#include "log.h"

bool i2s_dma_stop(uint8_t i2s_num){
    bool res = false;
    struct device* I2sDev = I2sNumToI2sDevPtr((I2sNum_t)i2s_num);
    int ret = i2s_trigger(I2sDev, I2S_DIR_TX, I2S_TRIGGER_STOP);
    if(0==ret) {
        res = true;
    }else {
        LOG_ERROR(I2S, "%u TrigStopErr %d=%s", i2s_num, ret, ErrNo2Str(ret));
    }
    return res;
}

bool i2s_api_write(uint8_t i2s_num, uint16_t* array, size_t size){
    bool res = false;
    if(array && size) {
        struct device* I2sDev = I2sNumToI2sDevPtr((I2sNum_t)i2s_num);
        int ret = i2s_write(I2sDev, (void *) array, (size_t) size);
        if(0==ret) {
            res = true;
        } else {
            LOG_ERROR(I2S, "%u WriteErr %d=%s", i2s_num, ret, ErrNo2Str(ret));
            res = false;
        }
    }
    return res;
}

bool i2s_play_tx(uint8_t i2s_num,uint8_t dac_num , bool status){
    bool res = false;
    int ret = 0;
    struct device* I2sDev = I2sNumToI2sDevPtr((I2sNum_t)i2s_num);
      SwDac_t* DacNode = sw_dac_get_node(dac_num);
    if(I2sDev ) {
#ifdef HAS_SW_DAC
        if(DacNode) {
            if(DacNode->tx_sample_array) {
                res = true;
            } else {
                res = false;
                LOG_ERROR(LG_DAC, "TrackArrayErr");
            }
            if(DacNode->sample_cnt) {
                res = true;
            } else {
                res = false;
                LOG_ERROR(LG_DAC, "TrackSampleCntErr");
            }
        }
#endif /*HAS_SW_DAC*/
    }else {
        LOG_ERROR(I2S, "%u DevErr", i2s_num);
        res = false;
    }

    if(res) {
          LOG_DEBUG(I2S, "SpotRecord %u", dac_num);
          LOG_INFO(I2S, "Play %u Samples", DacNode->sample_cnt);
          res = i2s_api_write(i2s_num, (uint16_t*)&DacNode->tx_sample_array[0], DacNode->sample_cnt);
          enum i2s_trigger_cmd trig = OnOffToI2sTrig(status);
          ret = i2s_trigger(I2sDev, I2S_DIR_TX, trig);
          if(0==ret) {
              res = true;
          } else {
              LOG_ERROR(I2S, "%u TrigErr %d=%s", i2s_num, ret, ErrNo2Str(ret));
          }
      } else {
        LOG_ERROR(LG_DAC, "TrackErr");
    }
    return res;
}

bool i2s_read_write(uint8_t i2s_num, uint32_t tx_sample){
    bool res = false;
    struct device* I2sDev = I2sNumToI2sDevPtr((I2sNum_t)i2s_num);
    int ret = i2s_trigger(I2sDev, I2S_DIR_BOTH, I2S_TRIGGER_START);
    if(0==ret) {
        res = true;
    }else {
        LOG_ERROR(I2S, "%u TrigErr %d=%s", i2s_num, ret, ErrNo2Str(ret));
    }
    return res;
}

bool i2s_read_sample(uint8_t i2s_num, size_t size){
    bool res = false;
    struct device* I2sDev = I2sNumToI2sDevPtr((I2sNum_t)i2s_num);
    if(I2sDev) {
        uint8_t* mem_block=NULL;
        int ret = i2s_read(I2sDev, &mem_block, (size_t*) &size);
        if(0==ret) {
            if(mem_block) {
                res = true;
            }else{
                LOG_ERROR(I2S, "NoData");
                res = false;
            }
        }else{
            LOG_ERROR(I2S, "%u ReadErr %d=%s", i2s_num, ret, ErrNo2Str(ret));
        }
    }
    return res;
}

bool i2s_api_read(uint8_t i2s_num, uint16_t* array, size_t size){
    bool res = false;
    if(array && size) {
        struct device* I2sDev = I2sNumToI2sDevPtr((I2sNum_t)i2s_num);
        uint8_t *mem_block = NULL;
        int ret = i2s_read(I2sDev, (void **) &mem_block, &size);
        if(0==ret) {
            if(mem_block) {
                res = true;
                memcpy(array,mem_block,size);
            } else {
                res = false;
                LOG_ERROR(I2S, "%u ReadDataErr", i2s_num);
            }
        } else {
            LOG_ERROR(I2S, "%u ReadErr %d=%s", i2s_num, ret, ErrNo2Str(ret));
        }
    }
    return res;
}

bool i2s_init(void) {
    bool res = true;
    uint8_t cnt = 0;
#ifdef HAS_LOG
    LOG_INFO(I2S, "Init");
#endif

#ifdef HAS_I2S0
    cnt += (uint8_t)i2s_init_ll(0);
#endif /*HAS_I2S0*/

#ifdef HAS_I2S1
    cnt += (uint8_t)i2s_init_ll(1);
#endif /*HAS_I2S1*/

    if(cnt) {
        LOG_INFO(I2S, "Init %u I2Ss", cnt);
        res = true;
    } else {
        LOG_ERROR(I2S, "NoI2S init");
        res = false;
    }

    return res;
}
